fix menu spacing issue

--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -143,7 +143,7 @@
   justify-content: center;
   position: relative;
   -webkit-tap-highlight-color: transparent;
-  width: 5em;
+  width: 6em;
   margin: auto;
 }
 .option:active::after {
